Closed
Bug 12002
Opened 27 years ago
Closed 26 years ago
Frames resize sluggisly
Categories
(Core :: Layout: Images, Video, and HTML Frames, defect, P3)
Core
Layout: Images, Video, and HTML Frames
Tracking
()
VERIFIED
FIXED
M15
People
(Reporter: jcarpenter0524, Assigned: pollmann)
References
()
Details
Overview Description:
Frames move sluggisly and won't stay where you release them
Steps to Reproduce:
- Go to debug/ViewerDemos/#9Frames from the menu
- try to move frames by dragging frame bars
Actual Results:
Frames move sluggisly and won't stay where you release them
Expected Results:
Frames should move easily and stop where you release them
Build Date & Platform Bug Found:
1999-08-16-09-M9
Linux only
Additional Builds and Platforms Tested On:
Frames work as expected on Win98, WinNT
(Mac build isn't working today, will have to check later.)
Updated•27 years ago
|
Assignee: karnaze → pollmann
Comment 1•27 years ago
|
||
Reassigning to Eric.
| Reporter | ||
Comment 2•27 years ago
|
||
Does not happen on Mac build 1999081708
Linux only problem
Summary: Frames move sluggisly and won't stay where you release them → [PP]Frames move sluggisly and won't stay where you release them
| Assignee | ||
Updated•27 years ago
|
Status: NEW → ASSIGNED
Target Milestone: M10
| Assignee | ||
Comment 4•27 years ago
|
||
Yup, this looks really bad... The slowness seems to be a general problem on
Linux, but the I don't know why they aren't tracking mouse movements
accurately. It seems like maybe not all needed mouse events are getting into
the event system.
| Assignee | ||
Updated•26 years ago
|
Target Milestone: M10 → M13
| Assignee | ||
Comment 5•26 years ago
|
||
Hm, M10 is past.
Updated•26 years ago
|
QA Contact: beppe → petersen
Updated•26 years ago
|
Target Milestone: M13 → M16
Comment 6•26 years ago
|
||
Moving to M16.
Updated•26 years ago
|
Summary: [PP]Frames move sluggisly and won't stay where you release them → Frames move sluggisly and won't stay where you release them
| Assignee | ||
Comment 8•26 years ago
|
||
I recently fixed frameset splitters so that they won't end up in the wrong
place. That fixes half of this bug. They are still sluggish. This is because
of the way we implemented the splitter. It causes a reflow of all neighboring
documents each time the slider is repainted during the drag. Nav's
implmentation is much snappier.
Keywords: pp
Summary: Frames move sluggisly and won't stay where you release them → Frames move sluggisly
| Assignee | ||
Comment 9•26 years ago
|
||
Looking at this with Troy, we noticed that it is much slower resizing framesets
than the sum of reflowing each of the affected documents. There must be some
other factor here causing us to do more work.
OS: Linux → All
Hardware: PC → All
Summary: Frames move sluggisly → Frames resize sluggisly
| Assignee | ||
Comment 10•26 years ago
|
||
I just checked in a fix for this problem. We were not repainting between
reflows as the splitter was dragged. I've added code to force a repaint, and
this makes the movement much smoother, particularly on Windows.
Closing this issues as FIXED. To verify, go to test 9 and drag one of the
splitters. It should stay where you drop it and perceived performance should be
improved. Thanks!
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Target Milestone: M16 → M15
Comment 11•26 years ago
|
||
Nice job pollmann!
Updated•8 years ago
|
Product: Core → Core Graveyard
Updated•8 years ago
|
Component: Layout: HTML Frames → Layout: Images
Product: Core Graveyard → Core
| Comment hidden (collapsed) |
You need to log in
before you can comment on or make changes to this bug.
Description
•