bug 12002: Resizing a frameset by moving the splitter was causing rapid reflows bug was not updating the corresponding views.  This change forces an update, which improves perceived performance.  r=Troy